--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,25 +5,7 @@
  * The "postCreateCommand" property specifies the commands to run after the container is created, which includes setting up R and cloning repositories.
  */
 {
-	"image": "mcr.microsoft.com/devcontainers/universal:latest",
-	"postCreateCommand": "./scripts/all/post_create_command.sh",
-	"features": {
-		"ghcr.io/rocker-org/devcontainer-features/r-rig:1": {
-			"installDevTools": true,
-			"installREnv": true,
-			"installRMarkdown": true,
-			"installRadian": true,
-			"installVscDebugger": true,
-			"version": "latest",
-			"pakVersion": "auto",
-			"vscodeRSupport": "full",
-			"pandocVersion": "latest"
-		},	
-		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {
-			"installTinyTex": true,
-			"version": "latest"
-		}
-	},
+	"image": "rocker/r-ver:3.6.3",
 	"customizations": {
 		"vscode": {
 			"extensions": [
